# smithereens

./: .codecov.yml  .dockerignore  .gitignore  Cargo.toml  Cross.toml  Deployment-PidgtmCompile.yml  Deployment-PidgtmMap.yml  Deployment-PidgtmUpdate.yml  Deployment-UserUpdater.yml  Dockerfile-RustBuildArm64  Dockerfile-RustBuildEnvArm64  Dockerfile-SmitheBackend  Dockerfile-SmitheBackend-Do  Dockerfile-SmitheFrontend  Dockerfile-UserUpdater  IdGeneration.py  MAINTENANCE.md  Makefile  README.md  TokenGenerationBot.py  backend-deployment-do.yml  backend-deployment.yml  backend-ingress-do.yml  backend-service-do.yml  backend-service.yml  clusterissuer.yml  deployment-pidgtmmap.sh  docker-compose.yaml  frontend-deployment.yml  frontend-ingress.yml  frontend-service.yml  job-pidgtmcompile.sh  pidgtm-map-deployment.yml  pidgtm-map-job.yml  smithe-net-certificate.yaml
.cargo/: config.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: azure-static-web-apps-mango-ocean-0926aa11e.yml  build.yml  ci-cd.yml  docker-deploy.yml
backend/: Cargo.toml  Dockerfile  test-rate-limit.ps1  tests.http
backend/src/: lib.rs  main.rs  startgg.rs
backend/tests/: live_api.rs  live_rate_limit.rs
database/: Cargo.toml  Makefile
database/migrations/2022-07-23-035357_migration0/: up.sql
database/migrations/2022-08-17-050713_migration0A/: up.sql
database/migrations/2022-08-30-050758_migration1/: down.sql
database/migrations/2022-10-01-185859_migration2/: down.sql  up.sql
database/migrations/2023-01-02-035810_migration3/: down.sql  up.sql
database/migrations/2023-12-27-224952_migration4/: down.sql  up.sql
database/migrations/2023-12-29-222652_migration5/: down.sql  up.sql
database/migrations/2024-01-04-004438_migration6/: down.sql  up.sql
database/src/: lib.rs  schema.rs
database/src/db_models/: consecutive_group_result.rs  empty_player_ids.rs  error_logs.rs  game.rs  last_checked_player_id.rs  mod.rs  pidgtm_compile_times.rs  player.rs  player_page_views.rs  set.rs  tournament.rs
docs/: design_principles.md
docs/imgs/: architecture.excalidraw
frontend/: .env.development  .env.production  Cargo.toml  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  styles.css  vite.config.js
frontend/maintenance/: index.html
frontend/src/: App.svelte  app.css  main.rs  models.rs  types.ts  utils.rs
frontend/src/components/: Footer.svelte  Header.svelte  footer.rs  header.rs  loading_spinner.rs  mod.rs  navbar.rs  player_list.rs  player_profile.rs
frontend/src/components/landing/: DiscordInvite.svelte  Features.svelte  Hero.svelte
frontend/src/components/player_profile/: player_profile_head_to_head_list.rs  player_profile_header.rs  player_profile_summary_data.rs  player_profile_tournament_list.rs
frontend/src/components/profile/: EventCard.svelte  H2HCard.svelte
frontend/src/components/search/: Results.svelte
frontend/src/lib/: api.ts  flags.ts  spr.ts
frontend/src/pages/: Landing.svelte  Profile.svelte  Search.svelte
image-upload-backend/: app.js  package.json  tests.http
k8s/: backend.yaml  frontend.yaml  ingress.local.yaml  ingress.yaml
lib/: Cargo.toml
lib/src/: common.rs  error_logs.rs  game.rs  lib.rs  pidgtm_compile_times.rs  player.rs  player_page_views.rs  set.rs  tournament.rs
migrations/2022-08-17-050713_migration0A/: down.sql
migrations/2022-08-18-050931_migration1/: down.sql  up.sql
migrations/2022-08-30-050758_migration1/: up.sql
src/: db.rs  lib.rs  schema.rs  startgg.rs
src/db_models/: empty_player_ids.rs  game.rs  last_checked_player_id.rs  mod.rs  player.rs  set.rs  tournament.rs
src/pidgtm/: compile.rs  inspect.rs  map.rs  mod.rs  update.rs
src/pidgtm_command_handlers/: inspect.rs  map.rs  mod.rs
src/queries/: event_getter.rs  mod.rs  player_getter.rs  seeding_geeter.rs  set_getter.rs
src/smithe/: event.rs  mod.rs  player.rs
src/smithe_command_handlers/: player.rs
src/sss_command_handlers/: event.rs  player.rs
startgg/: Cargo.toml
startgg/src/: lib.rs
startgg/src/queries/: event_getter.rs  mod.rs  player_getter.rs  seeding_geeter.rs  set_getter.rs
startgg_api/: Cargo.toml
startgg_api/src/: lib.rs
startgg_api/src/queries/: event_getter.rs  mod.rs  player_getter.rs  seeding_geeter.rs  seeding_getter.rs  set_getter.rs
