[package]
name = "smithereens"
version = "0.1.0"
edition = "2021"
authors = [ "Dan Chiarlone" ]

[lib]
doctest = false

[[bin]]
name = "pidgtm"
test = false

[[bin]]
name = "smithe"
test = false

[dependencies]
gql_client = "1"
serde = "1"
anyhow = "1"
tokio = { version = "1.1", features = ["full"] }
clap = { version = "3.2", features = ["derive"] }
url = "2.2"
diesel = { version = "1.4.4", features = ["postgres"] }
ctrlc = "3.2"
tracing = "0.1"
tracing-subscriber = "0.3"
dialoguer = "0.10"