[package]
name = "smithereens"
version = "0.1.0"
edition = "2021"
authors = [ "Dan Chiarlone" ]

[lib]
doctest = false

[[bin]]
name = "pidgtm"
test = false

[[bin]]
name = "smithe"
test = false

[dependencies]
anyhow = "1"
clap = { version = "3.2", features = ["derive"] }
ctrlc = "3.2"
dialoguer = "0.10"
diesel = { version = "1.4", features = ["postgres"] }
tokio = { version = "1.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.2"
startgg = { path = "startgg" }
smithe_database = { path = "database" }

[workspace]
members = [
    "backend",
    "database",
    "startgg"
]