[package]
name = "smithereens"
version = "0.1.0"
edition = "2021"
authors = [ "Dan Chiarlone" ]

[lib]
doctest = false
test = false

[[bin]]
name = "pidgtm"
test = false

[[bin]]
name = "smithe"
test = false

[dependencies]
anyhow = "1"
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"
diesel = { version = "2.1", features = ["postgres", "chrono"] }
tokio = { version = "1.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.2"
as-any = "0.3"
startgg = { path = "startgg_api/" }
smithe_database = { path = "database/" }
smithe_lib = { path = "lib/" }

[workspace]
members = [
    "backend/",
    "database/",
    "frontend/",
    "lib/",
    "startgg_api/"
]