[package]
name = "smithe_backend"
version = "0.1.0"
edition = "2021"
authors = ["Dan Chiarlone"]

[dependencies]
anyhow = "1"
rocket = "0.5.0-rc.2"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", rev = "c17e8145baa4790319fdb6a473e465b960f55e7c"}
serde_json = "1"
thiserror = "1"
smithe_lib = { path = "../lib" }
