[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# --- shared lib so integration tests can `use backend::…` -------------
[lib]
name = "backend"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = [
    "json",
    "gzip",
    "brotli",
    "deflate",
    "rustls-tls",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "std",
] }
thiserror = "1"
dotenvy = "0.15"
anyhow = "1"

[dev-dependencies]
futures = "0.3"
