[package]
name = "smithe_database"
version = "0.1.0"
edition = "2021"
authors = [ "Dan Chiarlone" ]

[lib]
doctest = false
test = false

[dependencies]
anyhow = "1"
diesel = { version = "2.1", features = ["postgres", "chrono"] }
serde = "1"
startgg = { path = "../startgg_api/" }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
diesel-async = { version = "0.4.1", features = ["postgres"] }
tokio = { version = "1", features = ["full", "macros"] }