[package]
name = "smithe_database"
version = "0.1.0"
edition = "2021"
authors = [ "Dan Chiarlone" ]

[lib]
doctest = false
test = false

[dependencies]
anyhow = "1"
diesel = { version = "2.1", features = ["postgres", "chrono"] }
serde = "1"
startgg = { path = "../startgg_api/" }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
diesel-async = { version = "0.4.1", features = ["postgres"] }
tokio = { version = "1", features = ["full", "macros"] }
rustls-native-certs = "0.6.2"
rustls = "0.20.8"
tokio-postgres = "0.7.7"
tokio-postgres-rustls = "0.9.0"
