[package]
name = "smithe_frontend"
version = "0.1.0"
edition = "2021"
authors = [ "Dan Chiarlone" ]

[dependencies]
yew = "0.19"
serde_json = "1"
wasm-bindgen-futures = "0.4"
gloo-net = "0.2"
serde = { version = "1", features = ["derive"]}
country-emoji = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
]