[package]
name = "smithe_frontend"
version = "0.1.0"
edition = "2021"
authors = [ "Dan Chiarlone" ]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
serde_json = "1"
wasm-bindgen-futures = "0.4"
gloo-net = "0.5"
serde = { version = "1", features = ["derive"]}
country-emoji = "0.2"
js-sys = "0.3"
wasm-bindgen = "0.2"
yew-router = "0.18"

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
	"HtmlButtonElement",
	"HtmlCanvasElement",
]
