[package]
name = "smithe_lib"
version = "0.1.0"
edition = "2021"
authors = [ "Dan Chiarlone" ]

[lib]
doctest = false
test = false

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
diesel = { version = "2.1", features = ["postgres", "chrono"] }
smithe_database = { path = "../database" }
startgg = { path = "../startgg_api" }
ctrlc = "3.4"
as-any = "0.3"
tokio = { version = "1.1", features = [ "rt", "macros" ] }
chrono = "0.4"
